--- a/Machine Learning/main.ipynb
+++ b/Machine Learning/main.ipynb
@@ -2,69 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-16 14:15:41.348120: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-16 14:15:41.508026: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 14:15:41.508062: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-01-16 14:15:42.365713: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 14:15:42.365806: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 14:15:42.365817: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-01-16 14:15:43.613937: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 14:15:43.613980: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2023-01-16 14:15:43.614005: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (codespaces-07d54d): /proc/driver/nvidia/version does not exist\n",
-      "2023-01-16 14:15:43.614414: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(64, 100, 65) # (batch_size, sequence_length, vocab_size)\n",
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding (Embedding)       (64, None, 256)           16640     \n",
+      " embedding_2 (Embedding)     (64, None, 256)           17408     \n",
       "                                                                 \n",
-      " gru (GRU)                   (64, None, 1024)          3938304   \n",
+      " gru_2 (GRU)                 (64, None, 1024)          3938304   \n",
       "                                                                 \n",
-      " dense (Dense)               (64, None, 65)            66625     \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 4,021,569\n",
-      "Trainable params: 4,021,569\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Input: \n",
-      " \"quondam queen,\\nYou have a father able to maintain you;\\nAnd better 'twere you troubled him than Franc\"\n",
-      "\n",
-      "Next Char Predictions: \n",
-      " \"UjbQ,mJidMELvjNagmGixpSCsRCvJ C3OVZ.YrVzqtqMxQBGcc-XC&yEh.cKJgL&Rqh?rMr.SjE!?DwXAp?'KW-LuxLNOObuJL,s\"\n",
-      "Prediction shape:  (64, 100, 65)  # (batch_size, sequence_length, vocab_size)\n",
-      "scalar_loss:       4.174435\n",
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " embedding_1 (Embedding)     (1, None, 256)            16640     \n",
-      "                                                                 \n",
-      " gru_1 (GRU)                 (1, None, 1024)           3938304   \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (1, None, 65)             66625     \n",
+      " dense_2 (Dense)             (64, None, 68)            69700     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 4,021,569\n",
-      "Trainable params: 4,021,569\n",
+      "Total params: 4,025,412\n",
+      "Trainable params: 4,025,412\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Received incompatible tensor with shape (78, 256) when attempting to restore variable with shape (68, 256) and name layer_with_weights-0/embeddings/.ATTRIBUTES/VARIABLE_VALUE.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 80\u001b[0m\n\u001b[1;32m     78\u001b[0m checkpoint_dir \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./training_checkpoints\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     79\u001b[0m checkpoint_prefix \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(checkpoint_dir, \u001b[39m\"\u001b[39m\u001b[39mcheckpoints\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 80\u001b[0m model\u001b[39m.\u001b[39;49mload_weights(tf\u001b[39m.\u001b[39;49mtrain\u001b[39m.\u001b[39;49mlatest_checkpoint(checkpoint_dir))\n\u001b[1;32m     82\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mInput: \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39mrepr\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(idx2char[input_example_batch[\u001b[39m0\u001b[39m]])))\n\u001b[1;32m     83\u001b[0m \u001b[39mprint\u001b[39m()\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/.python/current/lib/python3.10/site-packages/tensorflow/python/training/saving/saveable_object_util.py:139\u001b[0m, in \u001b[0;36mResourceVariableSaveable.restore\u001b[0;34m(self, restored_tensors, restored_shapes)\u001b[0m\n\u001b[1;32m    136\u001b[0m   assigned_variable \u001b[39m=\u001b[39m resource_variable_ops\u001b[39m.\u001b[39mshape_safe_assign_variable_handle(\n\u001b[1;32m    137\u001b[0m       \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle_op, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_var_shape, restored_tensor)\n\u001b[1;32m    138\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m--> 139\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    140\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mReceived incompatible tensor with shape \u001b[39m\u001b[39m{\u001b[39;00mrestored_tensor\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    141\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mwhen attempting to restore variable with shape \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_var_shape\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    142\u001b[0m       \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mand name \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n\u001b[1;32m    143\u001b[0m \u001b[39mreturn\u001b[39;00m assigned_variable\n",
+      "\u001b[0;31mValueError\u001b[0m: Received incompatible tensor with shape (78, 256) when attempting to restore variable with shape (68, 256) and name layer_with_weights-0/embeddings/.ATTRIBUTES/VARIABLE_VALUE."
      ]
     }
    ],
@@ -142,14 +114,17 @@
     "    example_batch_predictions[0], num_samples=1)\n",
     "sampled_indices = tf.squeeze(sampled_indices, axis=-1).numpy()\n",
     "\n",
-    "print(\"Input: \\n\", repr(\"\".join(idx2char[input_example_batch[0]])))\n",
-    "print()\n",
-    "print(\"Next Char Predictions: \\n\", repr(\"\".join(idx2char[sampled_indices])))\n",
-    "\n",
     "\n",
     "def loss(labels, logits):\n",
     "    return tf.keras.losses.sparse_categorical_crossentropy(labels, logits, from_logits=True)\n",
     "\n",
+    "checkpoint_dir = './training_checkpoints'\n",
+    "checkpoint_prefix = os.path.join(checkpoint_dir, \"checkpoints\")\n",
+    "model.load_weights(tf.train.latest_checkpoint(checkpoint_dir))\n",
+    "\n",
+    "print(\"Input: \\n\", repr(\"\".join(idx2char[input_example_batch[0]])))\n",
+    "print()\n",
+    "print(\"Next Char Predictions: \\n\", repr(\"\".join(idx2char[sampled_indices])))\n",
     "\n",
     "example_batch_loss = loss(target_example_batch, example_batch_predictions)\n",
     "print(\"Prediction shape: \", example_batch_predictions.shape,\n",
@@ -158,17 +133,15 @@
     "\n",
     "model.compile(optimizer='adam', loss=loss)\n",
     "\n",
-    "checkpoint_dir = './training_checkpoints'\n",
-    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch}\")\n",
     "\n",
     "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=checkpoint_prefix,\n",
     "    save_weights_only=True)\n",
     "\n",
-    "EPOCHS = 10\n",
-    "# history = model.fit(dataset, epochs=EPOCHS, callbacks=[checkpoint_callback])\n",
+    "EPOCHS = 1\n",
+    "history = model.fit(dataset, epochs=EPOCHS, callbacks=[checkpoint_callback])\n",
     "\n",
-    "# tf.train.latest_checkpoint(checkpoint_dir)\n",
+    "tf.train.latest_checkpoint(checkpoint_dir)\n",
     "\n",
     "model = build_model(vocab_size, embedding_dim, rnn_units, batch_size=1)\n",
     "\n",
@@ -178,15 +151,7 @@
     "\n",
     "model.summary()\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "def generate_text(model, start_string, temperature = 1.0):\n",
     "    num_generate = 1000\n",
     "\n",
@@ -213,57 +178,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BANU:\n",
-      "Hello Clown!\n",
+      "banu Chrisnadi, [1/5/23 7:40 AM]\n",
+      "mas tolong cekkan aplikasi mukab\n",
       "\n",
-      "KING RICHARD III:\n",
-      "The common his son are made the truth of this parallel for the gates,\n",
-      "That would I do think the consul's blood and ends:\n",
-      "But I will not say so dead the house of Lancaster,\n",
-      "And therefore find the truth of the house of his death,\n",
-      "But that the house of Lancaster, have I not speak.\n",
+      "Mbak Raqicine onek raban mastassedan Prtrek HTTPPu dKik antukas soto > taa aDo yang ckpe  rhiripas\n",
       "\n",
-      "KING RICHARD III:\n",
-      "What will you say you shall drink thee this,\n",
-      "For one that was born to be so dead.\n",
+      "Nungki Edi Rahmadi, [1/6/23 8:17 AM]\n",
+      "mas para b gut lange forense ek espud , peta msso yaan kara luyannyackaban da tar ante\n",
       "\n",
-      "DUCHESS OF YORK:\n",
-      "What say you to the consul of the consul\n",
-      "Will the world is strange for your son and my true love.\n",
+      "Nungki Edi Rya Rahmadi, [1/6/23 11:19 PM]\n",
+      "ie\n",
       "\n",
-      "RICHARD:\n",
-      "And that the king is all the rest and the rest\n",
-      "Sixteen you the rest so long as thou art not so,\n",
-      "Being but the rest of this seat of the house.\n",
+      "Mbak Hadwa, [1/9/23 10:12 AM]\n",
+      "kengmape Tb\n",
       "\n",
-      "Second Servingman:\n",
-      "What, will you have been a thousand friends,\n",
-      "But that you will not be a purpose.\n",
+      "Mus AKPuk masinya mri beruri\n",
       "\n",
-      "PETRUCHIO:\n",
-      "I have not so resisted the charge of the house of York.\n",
+      "Om Yayak, [1/6/23 8:33 PM]\n",
+      "@yRyay4 > itansa da onte data selu uku da ser heris isi mas heri pikukar.kukapkuk regii\n",
       "\n",
-      "GREMIO:\n",
-      "What is the way?\n",
+      "Nungki Edi hat jsi dakanin ani ya nias dlre sjongki Petmhsi > httla jsok bervar.ko mpungkinker.js\n",
       "\n",
-      "PETRUCHIO:\n",
-      "What, will you see the truth of the marks\n",
-      "Which he should say you to the ground of the death.\n",
+      "puk SPM/ ketu/s SSKM]\n",
+      "Og Kerved:\n",
       "\n",
-      "GREMIO:\n",
-      "I think the father of th\n"
+      "Mbak Rahmadi, [1/5/23 8:46 PM]\n",
+      "@y4d_[1/5/23 10:20 AM]\n",
+      "ett:\n",
+      "\n",
+      "Adhitya Putri ntyatannfo War.\n",
+      "\n",
+      "Darwanyo Edi Rahmadi, [1/5/23 7:46 PM]\n",
+      "Oym mas Arbi, [1/5/23 7:38 PM]\n",
+      "\n",
+      "\n",
+      "Raswanto, [1/9/23 8:41 AM]\n",
+      "ya\n",
+      "\n",
+      "Adhituk lau ya?\n",
+      "\n",
+      "1war Rahma, [1/5/23 9:10 AM]\n",
+      "iki dalu info ]\n",
+      "\n",
+      "Om Yaakinya mas legi mas? kasintar idi, A1bilumah Rahmadi tarah batap.ina nikunan du karah ula dinunni mas lemasi fok pitasintar.id/aptobkok:/T/2. T::\n"
      ]
     }
    ],
    "source": [
-    "print(generate_text(model, start_string=u\"BANU:\\nHello Clown!\\n\\n\",temperature=0.3))"
+    "print(generate_text(model, start_string=u\"banu Chrisnadi, [1/5/23 7:40 AM]\\nmas tolong cekkan aplikasi mukab\\n\\n\"))"
    ]
   }
  ],
