--- a/MachineLearning/gpt_dev.ipynb
+++ b/MachineLearning/gpt_dev.ipynb
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -726,18 +726,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.211148 M parameters\n",
-            "step 0: train loss 4.5545, val loss 4.5496\n",
-            "step 100: train loss 2.5430, val loss 2.6697\n",
-            "step 200: train loss 2.3197, val loss 2.5322\n",
-            "step 300: train loss 2.1284, val loss 2.4330\n",
-            "step 400: train loss 1.9418, val loss 2.4090\n",
-            "step 500: train loss 1.7219, val loss 2.3451\n",
-            "step 600: train loss 1.5280, val loss 2.3864\n",
-            "step 700: train loss 1.3720, val loss 2.3948\n",
-            "step 800: train loss 1.2282, val loss 2.5059\n",
-            "step 900: train loss 1.0935, val loss 2.4528\n",
-            "step 999: train loss 0.9743, val loss 2.5698\n"
+            "0.412896 M parameters\n",
+            "step 0: train loss 0.9634, val loss 2.0788\n",
+            "step 100: train loss 0.6241, val loss 2.2409\n",
+            "step 200: train loss 0.4403, val loss 2.4147\n",
+            "step 300: train loss 0.3576, val loss 2.5067\n",
+            "step 400: train loss 0.3009, val loss 2.6647\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[40], line 213\u001b[0m\n\u001b[1;32m    211\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad(set_to_none\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    212\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m--> 213\u001b[0m optimizer\u001b[39m.\u001b[39;49mstep()\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/optimizer.py:140\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    138\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[1;32m    139\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[0;32m--> 140\u001b[0m     out \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    141\u001b[0m     obj\u001b[39m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    142\u001b[0m     \u001b[39mreturn\u001b[39;00m out\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/grad_mode.py:27\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m     26\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclone():\n\u001b[0;32m---> 27\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:162\u001b[0m, in \u001b[0;36mAdamW.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    158\u001b[0m             max_exp_avg_sqs\u001b[39m.\u001b[39mappend(state[\u001b[39m'\u001b[39m\u001b[39mmax_exp_avg_sq\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    160\u001b[0m         state_steps\u001b[39m.\u001b[39mappend(state[\u001b[39m'\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m--> 162\u001b[0m     adamw(params_with_grad,\n\u001b[1;32m    163\u001b[0m           grads,\n\u001b[1;32m    164\u001b[0m           exp_avgs,\n\u001b[1;32m    165\u001b[0m           exp_avg_sqs,\n\u001b[1;32m    166\u001b[0m           max_exp_avg_sqs,\n\u001b[1;32m    167\u001b[0m           state_steps,\n\u001b[1;32m    168\u001b[0m           amsgrad\u001b[39m=\u001b[39;49mamsgrad,\n\u001b[1;32m    169\u001b[0m           beta1\u001b[39m=\u001b[39;49mbeta1,\n\u001b[1;32m    170\u001b[0m           beta2\u001b[39m=\u001b[39;49mbeta2,\n\u001b[1;32m    171\u001b[0m           lr\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mlr\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    172\u001b[0m           weight_decay\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mweight_decay\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    173\u001b[0m           eps\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39meps\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    174\u001b[0m           maximize\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mmaximize\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    175\u001b[0m           foreach\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mforeach\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    176\u001b[0m           capturable\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mcapturable\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m    178\u001b[0m \u001b[39mreturn\u001b[39;00m loss\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:219\u001b[0m, in \u001b[0;36madamw\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, foreach, capturable, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize)\u001b[0m\n\u001b[1;32m    216\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m     func \u001b[39m=\u001b[39m _single_tensor_adamw\n\u001b[0;32m--> 219\u001b[0m func(params,\n\u001b[1;32m    220\u001b[0m      grads,\n\u001b[1;32m    221\u001b[0m      exp_avgs,\n\u001b[1;32m    222\u001b[0m      exp_avg_sqs,\n\u001b[1;32m    223\u001b[0m      max_exp_avg_sqs,\n\u001b[1;32m    224\u001b[0m      state_steps,\n\u001b[1;32m    225\u001b[0m      amsgrad\u001b[39m=\u001b[39;49mamsgrad,\n\u001b[1;32m    226\u001b[0m      beta1\u001b[39m=\u001b[39;49mbeta1,\n\u001b[1;32m    227\u001b[0m      beta2\u001b[39m=\u001b[39;49mbeta2,\n\u001b[1;32m    228\u001b[0m      lr\u001b[39m=\u001b[39;49mlr,\n\u001b[1;32m    229\u001b[0m      weight_decay\u001b[39m=\u001b[39;49mweight_decay,\n\u001b[1;32m    230\u001b[0m      eps\u001b[39m=\u001b[39;49meps,\n\u001b[1;32m    231\u001b[0m      maximize\u001b[39m=\u001b[39;49mmaximize,\n\u001b[1;32m    232\u001b[0m      capturable\u001b[39m=\u001b[39;49mcapturable)\n",
+            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:270\u001b[0m, in \u001b[0;36m_single_tensor_adamw\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize, capturable)\u001b[0m\n\u001b[1;32m    267\u001b[0m step_t \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    269\u001b[0m \u001b[39m# Perform stepweight decay\u001b[39;00m\n\u001b[0;32m--> 270\u001b[0m param\u001b[39m.\u001b[39;49mmul_(\u001b[39m1\u001b[39;49m \u001b[39m-\u001b[39;49m lr \u001b[39m*\u001b[39;49m weight_decay)\n\u001b[1;32m    272\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[1;32m    273\u001b[0m exp_avg\u001b[39m.\u001b[39mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m beta1)\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -754,13 +764,13 @@
         "learning_rate = 1e-3\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "eval_iters = 200\n",
-        "n_embd = 64\n",
-        "n_head = 4\n",
+        "n_embd = 8\n",
+        "n_head = 8\n",
         "n_layer = 4\n",
         "dropout = 0.0\n",
         "# ------------\n",
         "\n",
-        "torch.manual_seed(1337)\n",
+        "# torch.manual_seed(1337)\n",
         "\n",
         "# wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
         "with open('conversation.yaml', 'r', encoding='utf-8') as f:\n",
@@ -928,7 +938,10 @@
         "        return idx\n",
         "\n",
         "model = BigramLanguageModel()\n",
-        "model.load_state_dict(torch.load('model.pt'))\n",
+        "try:\n",
+        "    model.load_state_dict(torch.load('model.pt'))\n",
+        "except:\n",
+        "    torch.save(model.state_dict(), 'model.pt')\n",
         "m = model.to(device)\n",
         "# print the number of parameters in the model\n",
         "print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')\n",
@@ -956,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 41,
       "metadata": {
         "id": "fjjvMifYZf7x"
       },
@@ -965,17 +978,49 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "user: Who are you?\n",
-            "Bot: I am lan Anguage diskis a great beouing purppostess, and a a maattypuse, indexacrly is + 3. Chaig that state thaia thmat is a Pebach out?0 is calludi.\n",
+            "Banu: hello\n",
+            "Marcle: hy, tre catrconkig?\n",
+            "<stop>\n",
+            "Banu: You sou dealso zhat b;\n",
             "\n",
-            "User: What is a ghat ia the d6/ wor chermor e d\n"
+            "<stop>\n",
+            "Banu: Ohat barys, perfect that Marcle!\n",
+            "Marcle: No, sweetie. ghat's nkit Yome tomo .\n",
+            "Marcle: You tou wate to cheer movingesthe athe pick\n",
+            "Banu: Hello Marcle! How are you?\n",
+            "Marcle: Hi tiea. I'm roif toing the pow park bok bloJut yo?\n",
+            "<stop>\n",
+            "Banu: Ali, Iswhat I'm rere fatitely finiteEy thegerkger and and b:\n",
+            "\n",
+            "\n",
+            "function sum(a,b) {\n",
+            "  returea alda also bl\n",
+            "\n",
+            "}\n",
+            "<stop>\n",
+            "Banu: That, you're\n",
+            "Banu: \n",
+            "Marcle: proooble Mat, wethat arcle.\n",
+            "<stop>\n",
+            "Banu: Youllight, you wetet anyou ou dant to the bring u?\n",
+            "<stop>\n",
+            "Banu: Sounds doonds goond.\n",
+            "Marcle: Gooodn't Godnight Banu, sleep well.\n",
+            "Marcle: Gooodnight Bankight B\n"
           ]
         }
       ],
       "source": [
+        "text = \"\"\n",
+        "\n",
         "# generate from the model\n",
-        "ts = torch.tensor([encode('user: Who are you?\\nBot:')], dtype=torch.long, device=device)\n",
-        "print(decode(m.generate(ts, max_new_tokens=200)[0].tolist()))"
+        "while True:\n",
+        "\tuser_input = input(\"> \")\n",
+        "\tif(user_input == '') break;\n",
+        "\tts = torch.tensor([encode(f\"{text}Banu: {user_input}\\nMarcle:\")], dtype=torch.long, device=device)\n",
+        "\tresult = decode(m.generate(ts, max_new_tokens=200)[0].tolist())\n",
+        "\tprint(result)\n",
+        "    \n"
       ]
     }
   ],
@@ -984,7 +1029,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "tf",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -998,11 +1043,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.15"
+      "version": "3.10.4"
     },
     "vscode": {
       "interpreter": {
-        "hash": "cb40caf7efa070972a7d6c00fdeacc4321dc7ff9aba23888b89b38d15a669283"
+        "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
       }
     }
   },
