--- a/MachineLearning/gpt_dev.ipynb
+++ b/MachineLearning/gpt_dev.ipynb
@@ -713,41 +713,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hoelkOrFY8bN",
-        "outputId": "ee3f2d0e-917d-4a9d-d706-c29af8cfe90e"
+        "outputId": "ee3f2d0e-917d-4a9d-d706-c29af8cfe90e",
+        "tags": []
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.412896 M parameters\n",
-            "step 0: train loss 0.9634, val loss 2.0788\n",
-            "step 100: train loss 0.6241, val loss 2.2409\n",
-            "step 200: train loss 0.4403, val loss 2.4147\n",
-            "step 300: train loss 0.3576, val loss 2.5067\n",
-            "step 400: train loss 0.3009, val loss 2.6647\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[40], line 213\u001b[0m\n\u001b[1;32m    211\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad(set_to_none\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    212\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m--> 213\u001b[0m optimizer\u001b[39m.\u001b[39;49mstep()\n",
-            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/optimizer.py:140\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    138\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[1;32m    139\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[0;32m--> 140\u001b[0m     out \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    141\u001b[0m     obj\u001b[39m.\u001b[39m_optimizer_step_code()\n\u001b[1;32m    142\u001b[0m     \u001b[39mreturn\u001b[39;00m out\n",
-            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/grad_mode.py:27\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m     26\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclone():\n\u001b[0;32m---> 27\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:162\u001b[0m, in \u001b[0;36mAdamW.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    158\u001b[0m             max_exp_avg_sqs\u001b[39m.\u001b[39mappend(state[\u001b[39m'\u001b[39m\u001b[39mmax_exp_avg_sq\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    160\u001b[0m         state_steps\u001b[39m.\u001b[39mappend(state[\u001b[39m'\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m--> 162\u001b[0m     adamw(params_with_grad,\n\u001b[1;32m    163\u001b[0m           grads,\n\u001b[1;32m    164\u001b[0m           exp_avgs,\n\u001b[1;32m    165\u001b[0m           exp_avg_sqs,\n\u001b[1;32m    166\u001b[0m           max_exp_avg_sqs,\n\u001b[1;32m    167\u001b[0m           state_steps,\n\u001b[1;32m    168\u001b[0m           amsgrad\u001b[39m=\u001b[39;49mamsgrad,\n\u001b[1;32m    169\u001b[0m           beta1\u001b[39m=\u001b[39;49mbeta1,\n\u001b[1;32m    170\u001b[0m           beta2\u001b[39m=\u001b[39;49mbeta2,\n\u001b[1;32m    171\u001b[0m           lr\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mlr\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    172\u001b[0m           weight_decay\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mweight_decay\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    173\u001b[0m           eps\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39meps\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    174\u001b[0m           maximize\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mmaximize\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    175\u001b[0m           foreach\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mforeach\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    176\u001b[0m           capturable\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mcapturable\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m    178\u001b[0m \u001b[39mreturn\u001b[39;00m loss\n",
-            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:219\u001b[0m, in \u001b[0;36madamw\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, foreach, capturable, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize)\u001b[0m\n\u001b[1;32m    216\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m     func \u001b[39m=\u001b[39m _single_tensor_adamw\n\u001b[0;32m--> 219\u001b[0m func(params,\n\u001b[1;32m    220\u001b[0m      grads,\n\u001b[1;32m    221\u001b[0m      exp_avgs,\n\u001b[1;32m    222\u001b[0m      exp_avg_sqs,\n\u001b[1;32m    223\u001b[0m      max_exp_avg_sqs,\n\u001b[1;32m    224\u001b[0m      state_steps,\n\u001b[1;32m    225\u001b[0m      amsgrad\u001b[39m=\u001b[39;49mamsgrad,\n\u001b[1;32m    226\u001b[0m      beta1\u001b[39m=\u001b[39;49mbeta1,\n\u001b[1;32m    227\u001b[0m      beta2\u001b[39m=\u001b[39;49mbeta2,\n\u001b[1;32m    228\u001b[0m      lr\u001b[39m=\u001b[39;49mlr,\n\u001b[1;32m    229\u001b[0m      weight_decay\u001b[39m=\u001b[39;49mweight_decay,\n\u001b[1;32m    230\u001b[0m      eps\u001b[39m=\u001b[39;49meps,\n\u001b[1;32m    231\u001b[0m      maximize\u001b[39m=\u001b[39;49mmaximize,\n\u001b[1;32m    232\u001b[0m      capturable\u001b[39m=\u001b[39;49mcapturable)\n",
-            "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/optim/adamw.py:270\u001b[0m, in \u001b[0;36m_single_tensor_adamw\u001b[0;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize, capturable)\u001b[0m\n\u001b[1;32m    267\u001b[0m step_t \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    269\u001b[0m \u001b[39m# Perform stepweight decay\u001b[39;00m\n\u001b[0;32m--> 270\u001b[0m param\u001b[39m.\u001b[39;49mmul_(\u001b[39m1\u001b[39;49m \u001b[39m-\u001b[39;49m lr \u001b[39m*\u001b[39;49m weight_decay)\n\u001b[1;32m    272\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[1;32m    273\u001b[0m exp_avg\u001b[39m.\u001b[39mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m beta1)\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "0.213728 M parameters\n",
+            "step 0: train loss 1.8929, val loss 2.3735\n",
+            "step 10: train loss 1.8660, val loss 2.3310\n",
+            "step 20: train loss 1.8404, val loss 2.3515\n",
+            "step 30: train loss 1.7940, val loss 2.2884\n",
+            "step 40: train loss 1.7634, val loss 2.3118\n",
+            "step 50: train loss 1.7454, val loss 2.2565\n"
           ]
         }
       ],
@@ -764,8 +750,8 @@
         "learning_rate = 1e-3\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "eval_iters = 200\n",
-        "n_embd = 8\n",
-        "n_head = 8\n",
+        "n_embd = 64\n",
+        "n_head = 16\n",
         "n_layer = 4\n",
         "dropout = 0.0\n",
         "# ------------\n",
@@ -969,7 +955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 63,
       "metadata": {
         "id": "fjjvMifYZf7x"
       },
@@ -978,48 +964,34 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Banu: hello\n",
-            "Marcle: hy, tre catrconkig?\n",
-            "<stop>\n",
-            "Banu: You sou dealso zhat b;\n",
-            "\n",
-            "<stop>\n",
-            "Banu: Ohat barys, perfect that Marcle!\n",
-            "Marcle: No, sweetie. ghat's nkit Yome tomo .\n",
-            "Marcle: You tou wate to cheer movingesthe athe pick\n",
-            "Banu: Hello Marcle! How are you?\n",
-            "Marcle: Hi tiea. I'm roif toing the pow park bok bloJut yo?\n",
-            "<stop>\n",
-            "Banu: Ali, Iswhat I'm rere fatitely finiteEy thegerkger and and b:\n",
-            "\n",
-            "\n",
-            "function sum(a,b) {\n",
-            "  returea alda also bl\n",
-            "\n",
-            "}\n",
-            "<stop>\n",
-            "Banu: That, you're\n",
-            "Banu: \n",
-            "Marcle: proooble Mat, wethat arcle.\n",
-            "<stop>\n",
-            "Banu: Youllight, you wetet anyou ou dant to the bring u?\n",
-            "<stop>\n",
-            "Banu: Sounds doonds goond.\n",
-            "Marcle: Gooodn't Godnight Banu, sleep well.\n",
-            "Marcle: Gooodnight Bankight B\n"
+            "Banu: How are you\n",
+            "Marcle: ab) + doupllly rZ\n",
+            "<<"
           ]
         }
       ],
       "source": [
         "text = \"\"\n",
-        "\n",
+        "result = \"\"\n",
         "# generate from the model\n",
         "while True:\n",
+        "\ttext += result\n",
+        "\tresult = \"\"\n",
         "\tuser_input = input(\"> \")\n",
-        "\tif(user_input == '') break;\n",
-        "\tts = torch.tensor([encode(f\"{text}Banu: {user_input}\\nMarcle:\")], dtype=torch.long, device=device)\n",
-        "\tresult = decode(m.generate(ts, max_new_tokens=200)[0].tolist())\n",
-        "\tprint(result)\n",
+        "\tif(user_input == ''): break\n",
+        "\ttext = text + f\"Banu: {user_input}\\nMarcle:\"\n",
+        "\tprint(f\"Banu: {user_input}\\nMarcle:\", end=\"\")\n",
+        "\twhile True:\n",
+        "\t\tts = torch.tensor([encode(text+result)], dtype=torch.long, device=device)\n",
+        "\t\toutput = decode(m.generate(ts, max_new_tokens=10)[0].tolist())\n",
+        "\t\toutput = output[output.find(text+result)+len(text+result):]\n",
+        "\t\tresult = result + output\n",
+        "\t\tif \"<stop>\" in result:\n",
+        "\t\t\tresult = result[result.find(\"<stop>\")]\n",
+        "\t\t\tprint(result[result.find(output):], end=\"\")\n",
+        "\t\t\tbreak\n",
+        "\t\telse:\n",
+        "\t\t\tprint(output, end=\"\")\n",
         "    \n"
       ]
     }
