--- a/MachineLearning/gpt_dev.ipynb
+++ b/MachineLearning/gpt_dev.ipynb
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -728,12 +728,20 @@
           "output_type": "stream",
           "text": [
             "0.213728 M parameters\n",
-            "step 0: train loss 1.8929, val loss 2.3735\n",
-            "step 10: train loss 1.8660, val loss 2.3310\n",
-            "step 20: train loss 1.8404, val loss 2.3515\n",
-            "step 30: train loss 1.7940, val loss 2.2884\n",
-            "step 40: train loss 1.7634, val loss 2.3118\n",
-            "step 50: train loss 1.7454, val loss 2.2565\n"
+            "step 0: train loss 0.1727, val loss 3.3533\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[130], line 208\u001b[0m\n\u001b[1;32m    205\u001b[0m     torch\u001b[39m.\u001b[39msave(model\u001b[39m.\u001b[39mstate_dict(), \u001b[39m'\u001b[39m\u001b[39mmodel.pt\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    207\u001b[0m \u001b[39m# sample a batch of data\u001b[39;00m\n\u001b[0;32m--> 208\u001b[0m xb, yb \u001b[39m=\u001b[39m get_batch(\u001b[39m'\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    210\u001b[0m \u001b[39m# evaluate the loss\u001b[39;00m\n\u001b[1;32m    211\u001b[0m logits, loss \u001b[39m=\u001b[39m model(xb, yb)\n",
+            "Cell \u001b[0;32mIn[130], line 46\u001b[0m, in \u001b[0;36mget_batch\u001b[0;34m(split)\u001b[0m\n\u001b[1;32m     44\u001b[0m data \u001b[39m=\u001b[39m train_data \u001b[39mif\u001b[39;00m split \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m val_data\n\u001b[1;32m     45\u001b[0m ix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrandint(\u001b[39mlen\u001b[39m(data) \u001b[39m-\u001b[39m block_size, (batch_size,))\n\u001b[0;32m---> 46\u001b[0m x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i:i\u001b[39m+\u001b[39mblock_size] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     47\u001b[0m y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39mblock_size\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     48\u001b[0m x, y \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mto(device), y\u001b[39m.\u001b[39mto(device)\n",
+            "Cell \u001b[0;32mIn[130], line 46\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     44\u001b[0m data \u001b[39m=\u001b[39m train_data \u001b[39mif\u001b[39;00m split \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m val_data\n\u001b[1;32m     45\u001b[0m ix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrandint(\u001b[39mlen\u001b[39m(data) \u001b[39m-\u001b[39m block_size, (batch_size,))\n\u001b[0;32m---> 46\u001b[0m x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i:i\u001b[39m+\u001b[39mblock_size] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     47\u001b[0m y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39mblock_size\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     48\u001b[0m x, y \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mto(device), y\u001b[39m.\u001b[39mto(device)\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -741,6 +749,7 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.nn import functional as F\n",
+        "import time\n",
         "\n",
         "# hyperparameters\n",
         "batch_size = 16 # how many independent sequences will we process in parallel?\n",
@@ -751,7 +760,7 @@
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "eval_iters = 200\n",
         "n_embd = 64\n",
-        "n_head = 16\n",
+        "n_head = 8\n",
         "n_layer = 4\n",
         "dropout = 0.0\n",
         "# ------------\n",
@@ -955,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 133,
       "metadata": {
         "id": "fjjvMifYZf7x"
       },
@@ -964,35 +973,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Banu: How are you\n",
-            "Marcle: ab) + doupllly rZ\n",
-            "<<"
+            "Banu: Marcle How are you?\n",
+            "Marcle: I'm finitely in. What do you want to bring for the picnicnic?\n"
           ]
         }
       ],
       "source": [
         "text = \"\"\n",
         "result = \"\"\n",
+        "stopString = \"\\n\"\n",
         "# generate from the model\n",
         "while True:\n",
         "\ttext += result\n",
         "\tresult = \"\"\n",
         "\tuser_input = input(\"> \")\n",
         "\tif(user_input == ''): break\n",
-        "\ttext = text + f\"Banu: {user_input}\\nMarcle:\"\n",
+        "\ttext = text + f\"\\nBanu: {user_input}\\nMarcle:\"\n",
         "\tprint(f\"Banu: {user_input}\\nMarcle:\", end=\"\")\n",
         "\twhile True:\n",
         "\t\tts = torch.tensor([encode(text+result)], dtype=torch.long, device=device)\n",
-        "\t\toutput = decode(m.generate(ts, max_new_tokens=10)[0].tolist())\n",
+        "\t\toutput = decode(m.generate(ts, max_new_tokens=1)[0].tolist())\n",
         "\t\toutput = output[output.find(text+result)+len(text+result):]\n",
         "\t\tresult = result + output\n",
-        "\t\tif \"<stop>\" in result:\n",
-        "\t\t\tresult = result[result.find(\"<stop>\")]\n",
+        "\t\tif stopString in result:\n",
+        "\t\t\tresult = result[result.find(stopString):]\n",
         "\t\t\tprint(result[result.find(output):], end=\"\")\n",
         "\t\t\tbreak\n",
         "\t\telse:\n",
         "\t\t\tprint(output, end=\"\")\n",
-        "    \n"
+        "\ttime.sleep(0.5)\n"
       ]
     }
   ],
