--- a/MachineLearning/gpt_dev.ipynb
+++ b/MachineLearning/gpt_dev.ipynb
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -727,21 +727,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.213728 M parameters\n",
-            "step 0: train loss 0.1727, val loss 3.3533\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[130], line 208\u001b[0m\n\u001b[1;32m    205\u001b[0m     torch\u001b[39m.\u001b[39msave(model\u001b[39m.\u001b[39mstate_dict(), \u001b[39m'\u001b[39m\u001b[39mmodel.pt\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    207\u001b[0m \u001b[39m# sample a batch of data\u001b[39;00m\n\u001b[0;32m--> 208\u001b[0m xb, yb \u001b[39m=\u001b[39m get_batch(\u001b[39m'\u001b[39;49m\u001b[39mtrain\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    210\u001b[0m \u001b[39m# evaluate the loss\u001b[39;00m\n\u001b[1;32m    211\u001b[0m logits, loss \u001b[39m=\u001b[39m model(xb, yb)\n",
-            "Cell \u001b[0;32mIn[130], line 46\u001b[0m, in \u001b[0;36mget_batch\u001b[0;34m(split)\u001b[0m\n\u001b[1;32m     44\u001b[0m data \u001b[39m=\u001b[39m train_data \u001b[39mif\u001b[39;00m split \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m val_data\n\u001b[1;32m     45\u001b[0m ix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrandint(\u001b[39mlen\u001b[39m(data) \u001b[39m-\u001b[39m block_size, (batch_size,))\n\u001b[0;32m---> 46\u001b[0m x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i:i\u001b[39m+\u001b[39mblock_size] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     47\u001b[0m y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39mblock_size\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     48\u001b[0m x, y \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mto(device), y\u001b[39m.\u001b[39mto(device)\n",
-            "Cell \u001b[0;32mIn[130], line 46\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     44\u001b[0m data \u001b[39m=\u001b[39m train_data \u001b[39mif\u001b[39;00m split \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m \u001b[39melse\u001b[39;00m val_data\n\u001b[1;32m     45\u001b[0m ix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrandint(\u001b[39mlen\u001b[39m(data) \u001b[39m-\u001b[39m block_size, (batch_size,))\n\u001b[0;32m---> 46\u001b[0m x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i:i\u001b[39m+\u001b[39mblock_size] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     47\u001b[0m y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack([data[i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39mblock_size\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m ix])\n\u001b[1;32m     48\u001b[0m x, y \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mto(device), y\u001b[39m.\u001b[39mto(device)\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "0.213857 M parameters\n",
+            "step 0: train loss 2.4618, val loss 2.9168\n",
+            "step 100: train loss 2.0102, val loss 2.8475\n",
+            "step 200: train loss 1.6724, val loss 2.9312\n",
+            "step 300: train loss 1.3905, val loss 3.0557\n",
+            "step 400: train loss 1.1300, val loss 3.2967\n"
           ]
         }
       ],
@@ -964,32 +955,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 14,
       "metadata": {
         "id": "fjjvMifYZf7x"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Banu: Marcle How are you?\n",
-            "Marcle: I'm finitely in. What do you want to bring for the picnicnic?\n"
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2283552253.py, line 7)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    result = \"\"a\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
         "text = \"\"\n",
         "result = \"\"\n",
-        "stopString = \"\\n\"\n",
+        "stopString = \"\\n\\n\"\n",
         "# generate from the model\n",
         "while True:\n",
         "\ttext += result\n",
         "\tresult = \"\"\n",
-        "\tuser_input = input(\"> \")\n",
+        "\tdata = input(\"Data:\")\n",
+        "\tuser_input = input(\"Question:\")\n",
         "\tif(user_input == ''): break\n",
-        "\ttext = text + f\"\\nBanu: {user_input}\\nMarcle:\"\n",
-        "\tprint(f\"Banu: {user_input}\\nMarcle:\", end=\"\")\n",
+        "\tans = f\"\\nData:{data}\\nQuestion: {user_input}\\nAnswer:\"\n",
+        "\ttext = text + ans\n",
+        "\tprint(ans, end=\"\")\n",
         "\twhile True:\n",
         "\t\tts = torch.tensor([encode(text+result)], dtype=torch.long, device=device)\n",
         "\t\toutput = decode(m.generate(ts, max_new_tokens=1)[0].tolist())\n",
@@ -1010,7 +1003,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "tf",
       "language": "python",
       "name": "python3"
     },
@@ -1024,11 +1017,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.9.15"
     },
     "vscode": {
       "interpreter": {
-        "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+        "hash": "cb40caf7efa070972a7d6c00fdeacc4321dc7ff9aba23888b89b38d15a669283"
       }
     }
   },
